Changed the word from mutation to transformation because I think it is neater

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,22 @@ main.lof
 Chapters/Chapter6.aux
 Chapters/Chapter1.aux
 Appendices/AppendixA.aux
+main.toc
+main.synctex.gz
+main.pdf
+main.out
+main.lot
+main.log
+main.lof
+main.fls
+main.fdb_latexmk
+main.blg
+main.aux
+main.toc
+main.synctex.gz
+main.pdf
+main.out
+main.lot
+main.log
+main.lof
+main.aux
